--- a/src/style/search-results.scss
+++ b/src/style/search-results.scss
@@ -15,12 +15,12 @@
 		@include transition;
 
 		&:hover {
-			background-color: $accent-1;
+			background-color: $accent;
 		}
 
 		&.active {
 			margin-top: 10px;
-			background-color: $accent-1;
+			background-color: $accent;
 			border-bottom-color: transparent;
 			border-radius: 20px 20px 0 0;
 		}
